# talks

./: serve
delivery-guild/: README.md
delivery-guild-teaser/: README.md  index.html
dynastatic-websites/: abstract.md  notes.md
git-workshop/: README.md  git.md
jirafy/: index.html  slide-pack.js
new-k8s/: slide-pack.css  txels.css
notmytype/: .gitignore  Makefile  index.html  pyproject.toml  script.md  slide-pack.css  txels.css
notmytype/pack/: example1.py  example1b.py  example2.py  example2b.py  example2c.py  example3.py  example4.py  example_dataclass.py  example_dataclass2.py  example_fastapi.py  example_json.py  example_pydantic.py  tomato.py
notmytype/pack/inner/: example.py
number-systems/: README.md  index.html
slingshot-intro/: README.md  index.html
slingshot-k8s-future/: README.md  index.html
slingshot-pipelines/: index.html  slide-pack.css  txels.css
templates/slide-pack.v1.0.1/: slide-pack.min.css
testing-python/: issues.txt
testing-python/notes/: python-testing.md  unit-tests-best-practices.md
testing-python/songs/: count.py  lyrics.py  lyrics2.py
testing-python/test/songs/: test_lyrics.py  test_lyrics2.py
