[tool.poetry]
name = "notmytype"
version = "0.1.0"
description = "Talk about python hints"
authors = ["Carles Barrobés <carles@barrobes.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
fastapi = {extras = ["all"], version = "^0.62.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
